--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "@types/node": "^16.11.35",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
+    "bootstrap": "^5.2.2",
+    "prettier": "^2.7.1",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.6.0",
     "react-dom": "^18.1.0",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "sass": "^1.56.1",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
   },
